--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./src/styles/financialResume.css" />
     <link rel="stylesheet" href="./src/styles/sumValues.css" />
     <link rel="stylesheet" href="./src/styles/cardList.css" />
+    <link rel="stylesheet" href="./src/styles/modal.css" />
   </head>
   <body>
     <header class="header__container">
@@ -42,7 +43,7 @@
         <span id="sumValue"></span>
       </section>
       <section class="noEntrance">
-        <h3>Sem nenhum valor na categoria Entrada</h3>
+        <h3>Nenhum valor cadastrado</h3>
         <p>Registrar novo valor</p>
       </section>
       <ul class="card__list">
@@ -65,8 +66,15 @@
           <h3>Registro de valor</h3>
           <button class="modal__close">X</button>
         </div>
+        <div class="modal__text">
+          <p>
+            Digite o valor e em seguida aperte no botão referente ao tipo do
+            valor
+          </p>
+        </div>
         <form>
           <div class="modal__input">
+            <h3>Valor</h3>
             <label>R$</label>
             <input type="number" class="input__trasaction" />
           </div>
@@ -92,7 +100,7 @@
           </div>
           <div class="modal__buttons">
             <button class="modal__button--outline">Cancelar</button>
-            <button class="modal__button--purple">Criar</button>
+            <button class="modal__button--purple">Inserir Valor</button>
           </div>
         </form>
       </div>
