Versão Atualizada Control Finance

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="modal__input">
             <h3>Valor</h3>
             <div class="input__content">
-              <label>R$ <span id="input__money">00.00</span></label>
+              <label>R$</label>
               <input type="number" class="input__trasaction" />
             </div>
           </div>
@@ -90,7 +90,7 @@
               name="categoryId"
               value="0"
             />
-            <label for="entrada">Entrada</label>
+            <label for="entrada" class="entrancy">Entrada</label>
             <input
               hidden
               type="radio"
@@ -99,7 +99,7 @@
               name="categoryId"
               value="1"
             />
-            <label for="saida">Saída</label>
+            <label for="saida" class="exit">Saída</label>
           </div>
           <div class="modal__buttons">
             <button class="modal__button--outline">Cancelar</button>
